// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

11/26/2009
	r14 [LimitLine]
	* Restored scripts_main.conf. Sorry =x

	r33 [LimitLine]
	* Added Sorcerer and Genetic Skills.
	- Fire Expansion Lv1-4 still being worked on.
	- A few skill formulas and damage increments based on base level are custom. Look inside battle.c to find out which.
	- Sling Item, Change Material, Special Pharmacy not included.
	- Cast times and cooldowns are also custom. I'll update those when I get official info about them.
	* Minor cleanup in skill_db.txt and skill_cast_db.txt
	- Made all skills not yet implemented passive and removed them from skill_cast_db.

	r32 [pakpil]
	* Added all Rune Knight skills rewrited.
	* Fixed WL_SMUMMON... skills that wasn't showing spheres correctly.
	* Fixed pc_setoption, pc_setriding and pc_isriding.
	- Removed #define pc_isriding and added a new function to check if a pc is riding bassed in its class. (test version).

11/15/2009
	r15 [LimitLine]
	* Fixed Soul Expansion not doing doubled damage when under White Imprison.

	r13 [LimitLine]
	* Added rewritten Arch Bishop and Warlock skills to the trunk/rewrite folder.
	- Things missing: Editted item_db.txt with support for third class bitmasks.
		Current job system of stable/r13890, which is cleaner and more functional.
	- BEWARE! Everything in the trunk folder should be used for testing purposes only,
		though we do need your help reporting any bugs you might find so we can merge it to
		their respective /stable folder.
	- item_db.txt is not yet editted for items to work with third class characters. Please bear with me.